--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Página inicial</title>
@@ -60,16 +61,16 @@
     <section id="main-content">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 container-image">
+                <div class="col-sm-5 container-image">
                     <img src="./assets/fone.png" alt="" class="img-fluid">
                 </div>
-                <div class="col-sm-6 container-text">
-                    <h3>testo teste</h3>
+                <div class="col-sm-7 container-text">
+                    <h1>Hyper X On-EAR</h1>
                     <div class="row">
-                        <div class="col-sm-12">
-                            <span>TEXTO DE TESTE</span>
+                        <div class="col-sm-12 text-below-title">
+                            <span>Wireless over-ear headphones</span>
                         </div>
-                        <div class="col-sm-12">
+                        <div class="col-sm-12 stars">
                             <span class="fa fa-star checked icons"></span>
                             <span class="fa fa-star checked icons"></span>
                             <span class="fa fa-star checked icons"></span>
@@ -78,19 +79,23 @@
                         </div>
                     </div>
                    <div class="row">
-                       <div class="col-sm-12">
-                           <span>Consequat do voluptate</span>
-                       </div>
-                       <div class="col-sm-12 mb-3">
-                           <span>Consequat do voluptate do consequat minim adipisicing.</span>
-                       </div>
-                       <div class="col-sm-12">
-                            <span>Consequat do voluptate</span>
+                     <div class="container-text-below-stars">
+                        <div class="col-sm-12">
+                            <span class="text-below">Driver unit</span>
                         </div>
                         <div class="col-sm-12 mb-3">
-                            <span>Consequat do voluptate do consequat minim adipisicing.</span>
+                            <span class="last-text">700 m, dome type(CCAW Voice)</span>
                         </div>
-                        <div class="col-sm-4 mt-3 text-debug">
+                     </div>
+                     <div class="container-footer-card-left-text">
+                       <div class="col-sm-12">
+                            <span class="text-below">Consequat do voluptate</span>
+                        </div>
+                        <div class="col-sm-12 mb-3">
+                            <span class="last-text">Consequat do voluptate do consequat minim adipisicing.</span>
+                        </div>
+                    </div>
+                        <div class="col-sm-4 mt-3 value-text">
                             <h4>R$ 10,00</h4>
                         </div>
                         <div class="col-sm-8 mt-3">
