--- a/index.html
+++ b/index.html
@@ -98,16 +98,23 @@
                         <div class="col-sm-4 mt-3 value-text">
                             <h4>R$ 10,00</h4>
                         </div>
-                        <div class="col-sm-8 mt-3">
+                        <div class="col-sm-8 mt-3 button-add-shop">
                             <button class="css-button-rounded--grey">ADD ao carrinho</button>
                         </div>
                    </div>
-                    
                 </div>
             </div>
         </div>
     </section>
+    <section>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
 
+            </div>
+        </div>
+    </div>
+    </section>
     <script src="./bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
