--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="./style/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.1/css/all.css">    <link rel="stylesheet" href="./style/style.css">
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"> -->
     <title>Página inicial</title>
 </head>
 <body>
@@ -40,17 +39,17 @@
                 <div class="col-xxl-4 icons-navbar hidden-mobile">
                     <a href="" class="container-icons">
                         <span class="fav-icon-navbar">
-                            <i class="fas fa-search"></i>
+                            <i class="far fa-search"></i>
                         </span>
                     </a>
                     <a href="" class="container-icons">
                         <span class="fav-icon-navbar">
-                            <i class="fas fa-shopping-cart"></i>
+                            <i class="far fa-shopping-cart"></i>
                         </span> 
                     </a>
                     <a href="" class="container-icons">
                         <span class="fav-icon-navbar">
-                            <i class="fas fa-bars"></i>
+                            <i class="far fa-bars"></i>
                         </span>
                     </a>
               
@@ -106,12 +105,49 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="footer">
     <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-
-            </div>
+        <div class="row">   
+            <div class="col-sm-12 footer-container" >
+                <div class="row text-center footer-general">
+                    <div class="col-sm-12 col-xxl-4">
+                        <div class="row">
+                            <div class="col-sm-12 col-xxl-6 element">
+                                <i class="fal fa-waveform-path"></i>
+                            </div>
+                            <div class="col-sm-12 col-xxl-6">
+                                <span>
+                                    High-Resolution Audio compatible
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-xxl-4 middle-element-footer">
+                        <div class="row">
+                            <div class="col-sm-12 col-xxl-6 element">
+                                <i class="fab fa-bluetooth-b"></i>
+                            </div>
+                            <div class="col-sm-12 col-xxl-6">
+                                <span>
+                                    Wireless connectivity using bleutooth
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-xxl-4 last-element-footer">
+                        <div class="row">
+                            <div class="col-sm-12 col-xxl-6 element">
+                                <i class="fas fa-battery-empty"></i>
+                            </div>
+                            <div class="col-sm-12 col-xxl-6">
+                                <span>
+                                    A powerful battery that lasts up to 4 hours of use
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>  
         </div>
     </div>
     </section>
