alterado os textos e posição de botão

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <h4>R$ 10,00</h4>
                         </div>
                         <div class="col-sm-8 mt-3 button-add-shop">
-                            <button class="css-button-rounded--grey">ADD ao carrinho</button>
+                            <button class="css-button-rounded--grey">Adicionar ao carrinho</button>
                         </div>
                    </div>
                 </div>
